--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# This file can be removed as Streamlit secrets are now used.
+
 API_KEY=your_api_key_here
 DATABASE_URL=postgresql://<user>:<password>@<host>:<port>/<database_name>
 DATABASE_NAME=your_database_name_here
