--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "pydantic (>=2.11.4,<3.0.0)",
     "streamlit (>=1.45.0,<2.0.0)",
     "sqlalchemy (>=2.0.40,<3.0.0)",
-    "psycopg2 (>=2.9.10,<3.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
     "textwrap3 (>=0.9.2,<0.10.0)",
     "dotenv (>=0.9.9,<0.10.0)"
 ]
